Change Service to DTO